<?xml version="1.0"?>
<package format="3">
  <name>cbgl</name>
  <version>1.0.1</version>
  <description>The CAER-Based Global Localisation package</description>

  <maintainer email="alefilot@auth.gr">li9i</maintainer>

  <license>MIT</license>

  <!-- <depend>catkin</depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
<depend>pcl_conversions</depend>
<exec_depend>libpcl-dev</exec_depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
